add XX jvm options for jdk 8 to enable container limited memory control